@@ -37,6 +37,7 @@ su - spigot -c "git config --global --unset core.autocrlf"
 su - spigot -c "java -jar ~/BuildTools/BuildTools.jar"
 
 # Mark EULA as true and fire up the server
+su - spigot -c "java -Xms1G -Xmx1G -XX:+UseConcMarkSweepGC -jar ~/spigot*.jar"
 su - spigot -c "sed -i \"s/eula=false/eula=true/\" /home/spigot/eula.txt"
 su - spigot -c "java -Xms1G -Xmx1G -XX:+UseConcMarkSweepGC -jar ~/spigot*.jar"
 
